--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
+    "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vue-select": "^2.4.0",
+    "vuelidate": "^0.7.4",
+    "vuetify": "^1.1.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -17,8 +23,12 @@
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
     "@vue/eslint-config-prettier": "^3.0.0-rc.3",
+    "@vue/eslint-config-standard": "^3.0.0-rc.3",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "lint-staged": "^6.0.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.16"
   },
